migrate datawarning application : only clean code (Sonarqube rules)